src/objects/Utility_Company__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - Each Utility Service is attached to a single Utility Company.</description>
    <fields>
        <fullName>All_Electric_Service__c</fullName>
        <label>All-Electric Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Consumption_Profile__c</fullName>
        <label>Average Consumption Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Baseline_Consumption_kWh_day__c</fullName>
        <label>Baseline Consumption (kWh/day)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Consumption_kWh_month__c</fullName>
        <label>Baseline Consumption (kWh/month)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Rate_Code_Id__c</fullName>
        <description>Mapping of Astrum Utilities with CPF Utilities</description>
        <label>CPF Rate Code Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Fixed_Charge__c</fullName>
        <label>Daily Fixed Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Minimum_Bill__c</fullName>
        <label>Daily Minimum Bill</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Shifted_Consumption_Profile__c</fullName>
        <label>Day-Shifted Consumption Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Rate_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Rate Code ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EIA_Utility_Id__c</fullName>
        <externalId>true</externalId>
        <label>EIA Utility Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Vehicle_Discount_kWh__c</fullName>
        <label>Electric Vehicle Discount ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Externally_Available_Master__c</fullName>
        <formula>Utility_Company_Master__r.Externally_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Externally Available Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Externally_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the utility company should appear in lead forms as a selection option</inlineHelpText>
        <label>Externally Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Fixed_Charge__c</fullName>
        <label>Monthly Fixed Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Minimum_Bill__c</fullName>
        <label>Monthly Minimum Bill</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Night_Shifted_Consumption_Profile__c</fullName>
        <label>Night-Shifted Consumption Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpenEI_Label__c</fullName>
        <label>OpenEI Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Production_Credit_Rate__c</fullName>
        <label>Over-Production Credit Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Production_Credit__c</fullName>
        <label>Over-Production Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kWh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_1__c</fullName>
        <label>Period 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_2__c</fullName>
        <label>Period 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_3__c</fullName>
        <label>Period 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Amp_Reliability_Charge_100A__c</fullName>
        <label>Service Amp Reliability Charge (&lt;100A)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Amp_Reliability_Charge_101_200A__c</fullName>
        <label>Service Amp Reliability Charge (101-200A</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Amp_Reliability_Charge_201_400A__c</fullName>
        <label>Service Amp Reliability Charge (201-400A</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Amp_Reliability_Charge_400A__c</fullName>
        <label>Service Amp Reliability Charge (&gt;400A)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sighten_Rate_Schedule_uuid__c</fullName>
        <description>Contains the uuid for the utility rate code in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Rate Schedule uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_Rate_Territory_uuid__c</fullName>
        <description>Contains the uuid for the utility rate territory in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Rate Territory uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Serviced_Master__c</fullName>
        <formula>TEXT(Utility_Company_Master__r.State_Serviced__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Serviced Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Serviced__c</fullName>
        <label>State Serviced</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States_Serviced__c</fullName>
        <label>States Serviced</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tier_1_Cap__c</fullName>
        <label>Tier 1 Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_2_Cap__c</fullName>
        <label>Tier 2 Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_3_Cap__c</fullName>
        <label>Tier 3 Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Utility Rate Codes</relationshipLabel>
        <relationshipName>Utility_Rate_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_Code__c</fullName>
        <label>Utility Rate Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Service_Territory__c</fullName>
        <label>Utility Service Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Solar_Tariiff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value of Solar Tariff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekday_Schedule__c</fullName>
        <label>Weekday Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weekend_Schedule__c</fullName>
        <label>Weekend Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Utility Rate Code</label>
    <listViews>
        <fullName>Aux</fullName>
        <columns>NAME</columns>
        <columns>Rate_Code__c</columns>
        <columns>State_Serviced__c</columns>
        <columns>Default_Rate_Code__c</columns>
        <columns>States_Serviced__c</columns>
        <columns>Externally_Available__c</columns>
        <columns>CPF_Rate_Code_Id__c</columns>
        <columns>EIA_Utility_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Serviced__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>Aux</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Externally_Available_Utilities</fullName>
        <columns>NAME</columns>
        <columns>State_Serviced__c</columns>
        <columns>Externally_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Externally_Available__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Externally Available Utilities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Standard</fullName>
        <columns>NAME</columns>
        <columns>Rate_Code__c</columns>
        <columns>State_Serviced__c</columns>
        <columns>Default_Rate_Code__c</columns>
        <columns>States_Serviced__c</columns>
        <columns>Externally_Available__c</columns>
        <columns>CPF_Rate_Code_Id__c</columns>
        <columns>EIA_Utility_Id__c</columns>
        <columns>Weekday_Schedule__c</columns>
        <columns>Weekend_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Utility_Company__c.Custom</value>
        </filters>
        <label>Standard Rate Codes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Utility Rate Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Rate Codes</pluralLabel>
    <recordTypes>
        <fullName>Custom</fullName>
        <active>true</active>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>